# wwhf-2021-awesome-project

./: pyproject.toml
awesome/: stuff.py
tests/: test_awesome.py
