[tool.poetry]
name = "awesome"
version = "0.1.0"
description = "Our awesome WWHF project"
authors = ["Ian Lee <IanLee1521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo_wwhf = 'awesome.stuff:demo'
